# ML-practic

./: .dvcignore  .gitignore  README.md  notebook.ipynb  pyproject.toml
configs/: preprocessing-config.yaml  train-config.yaml  utils-config.yaml
data/outputs/2025-07-08/23-00-39/: metrics_2025-07-08_23-00-30.json  model_2025-07-08_23-00-30.pkl
data/processed/2025-07-08/23-00-30/: X_test.csv  X_train.csv  class_names.csv  y_test.csv  y_train.csv
data/raw/: iris.csv.dvc
src/preprocessing/: preprocessing.py
src/train/: train.py
src/utils/: config.yaml  download-dataset.py  dvc-add.py  dvc-download-from-gdrive.py  dvc-download.py  dvc-push-to-gdrive.py  dvc-update.py  modules.py
