[project]
name = "ml-practic"
version = "0.1.0"
description = "descriptiondd your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dvc>=3.60.1",
    "dvc-gdrive>=3.0.1",
    "dvclive>=3.48.2",
    "hydra-core>=1.3.2",
    "notebook>=7.4.3",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
]
